# storage/api-docs/api-docs.json
@@ -1,11 +1,11 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "API Ceniprof",
-        "description": "Servicio que permite consultar y ejecutar procesos de fabrica",
+        "title": "API REST",
+        "description": "Servicio que permite consultar usuarios internos y externos de cenicaña",
         "contact": {
             "name": "SETI",
-            "email": "meteorlogia@cenicana.org"
+            "email": "cirojas@cenicana.org"
         },
         "version": "1.0.0"
     },
@@ -34,7 +34,7 @@
                         }
                     },
                     {
-                        "name": "password",
+                        "name": "clave",
                         "in": "query",
                         "description": "Contraseña",
                         "required": true,
